updated screen pages and app.json to have entry point

--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "entryPoint": "App.js",
     "name": "japanese-tattoo-meanings",
     "slug": "japanese-tattoo-meanings",
     "version": "1.0.0",
